--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
     "astro": "^3.1.1",
+    "astro-icon": "^0.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.67.0"
   }
 }
