--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro-icon": "^0.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-unwrap-images": "^4.0.0",
     "sass": "^1.67.0"
   }
 }
